# pytorch-tao

./: .gitignore  MANIFEST.in  codecov.yml  design-pattern-cn.md  pyproject.toml  readme.md  requirements-dev.txt  setup.py  test.ipynb
.github/workflows/: docs.yaml  publish.yaml  test.yaml
docs/: arguments_parsing.rst  conf.py  plugins.rst  pytorch_tao.rst  requirements.txt  trackers.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_static/: custom.css
docs/source/: cli.rst  conf.py  index.rst  plugins.rst  quick_start.rst  repo.rst  running_and_tuning.rst  tao.rst  trackers.rst  trainer.rst  trainer_and_plugins.rst
examples/cifar10/: main.py  readme.md  requirements.txt
examples/mnist/: main.py
pytorch_tao/: __init__.py  adversarial.py  args.py  cli.py  core.py  devtool.py  exceptions.py  helper.py  repo.py  trainer.py  tune.py
pytorch_tao/plugins/: __init__.py  base.py  checkpoint.py  events.py  metrics.py  output_recorder.py  progress_bar.py  scheduler.py
pytorch_tao/templates/: .gitignore.jinja  cfg.py.jinja  cfg.yml.jinja
pytorch_tao/templates/projects/cifar10/: main.py.jinja
pytorch_tao/templates/projects/default/: .gitignore.jinja
pytorch_tao/templates/projects/default/.tao/: cfg.py.jinja
pytorch_tao/templates/projects/mini/: main.py.jinja
pytorch_tao/templates/projects/mini/.tao/: cfg.py.jinja
pytorch_tao/trackers/: __init__.py  aim_tracker.py  base.py  neptune_tracker.py  wandb_tracker.py
requirements/: dev.txt  prod.txt
tests/: conftest.py
tests/pytorch_tao/: test_args.py  test_core.py  test_helper.py  test_init.py  test_repo.py  test_trainer.py  test_tune.py
tests/pytorch_tao/plugins/: test_base.py  test_checkpoint.py  test_events.py  test_output_recorder.py  test_progress_bar.py  test_scheduler.py
tests/pytorch_tao/trackers/: test_tracker.py  test_wandb_tracker.py
tests/templates/: repo_for_tune_cfg.py.jinja  repo_for_tune_main.py.jinja  repo_with_arguments_main.py.jinja
