[tool.poetry]
name = "pytorch-tao"
version = "0.1.4"
description = "Tao for PyTorch"
authors = ["chenglu <chenglu.she@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
GitPython = "^3.1.27"
kaggle = "^1.5.12"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
usort = "^1.0.5"
ipdb = "^0.13.9"
pytest-cov = "^3.0.0"


[[tool.poetry.source]]
name = "qinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tao = "pytorch_tao.cli:main"
tao_devtool = "pytorch_tao.devtool:main"
